--- a/public/mainpage/blocked.css
+++ b/public/mainpage/blocked.css
@@ -87,6 +87,23 @@ h1 {
   opacity: 0.8;
 }
 
+.donation-note {
+  margin: 30px 0 0;
+  font-size: 0.70rem;
+  color: var(--text-light);
+  line-height: 1.4;
+}
+
+.donation-note a {
+  color: var(--primary);
+  text-decoration: none;
+  font-weight: 600;
+}
+
+.donation-note a:hover {
+  text-decoration: underline;
+}
+
 /* Animation to make it feel "cute" and alive */
 @keyframes float {
 
