--- a/public/settings/setting.css
+++ b/public/settings/setting.css
@@ -179,6 +179,23 @@ input[type="time"] {
   transform: scale(0.98);
 }
 
+.donation-note {
+  margin: 30px 0 0;
+  font-size: 0.70rem;
+  color: var(--text-light);
+  line-height: 1.4;
+}
+
+.donation-note a {
+  color: var(--primary);
+  text-decoration: none;
+  font-weight: 600;
+}
+
+.donation-note a:hover {
+  text-decoration: underline;
+}
+
 /* Custom Switch Toggle (Optional but Professional) */
 .switch {
   position: relative;
